<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo8"
    android:orientation="vertical"
    tools:context="com.danielescobar.formulario1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/eNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contraseña"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/eContraseña1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetir"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/eContraseña2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/eCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rMasculino"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="center"
                android:onClick="onRadioButtonClicked"
                android:text="@string/masculino"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rFemenino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onRadioButtonClicked"
                android:text="@string/femenino"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechadenacimiento"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="Dia/Mes/Año"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15dp"
                android:textStyle="italic"
                android:background="@color/darkmagenta"
                android:padding="10sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lugar_nacimiento"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Spinner
                android:id="@+id/sciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkmagenta"
                android:popupBackground="@color/darkmagenta"
                android:textSize="10sp"
                android:textStyle="italic"

                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/pasatiempos"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp">

            <CheckBox
                android:id="@+id/cNadar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:text="@string/nadar"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/cCine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:text="@string/cine"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/cCorrer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:text="@string/correr"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>


        <Button
            android:id="@+id/bguardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkmagenta"
            android:onClick="onButtonClicked"
            android:text="@string/guardar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eMostrar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>







